[gd_scene load_steps=7 format=3 uid="uid://pgxfnmw6ne5i"]

[ext_resource type="Script" uid="uid://br2ydx01jo4qi" path="res://scripts/shop.gd" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://76yqyuxbcidx" path="res://graphics/shopbg.png" id="2_xfvoa"]
[ext_resource type="FontFile" uid="uid://dn58tg6ctf7br" path="res://font_8.tres" id="3_1l46r"]
[ext_resource type="Texture2D" uid="uid://dm6cksgqchrf5" path="res://graphics/continue.png" id="4_8r1wq"]
[ext_resource type="Script" uid="uid://dpe72hg3l4dw8" path="res://scripts/button.gd" id="5_8r1wq"]
[ext_resource type="Texture2D" uid="uid://c611rtyehg4ck" path="res://graphics/arrow.png" id="6_8r1wq"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_xfvoa")
metadata/_custom_type_script = "uid://dhuq7u2kbxdpe"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 96)
texture = ExtResource("2_xfvoa")

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 18.0
offset_right = 24.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_1l46r")
theme_override_font_sizes/font_size = 8
text = "$999"

[node name="Label2" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 147.0
offset_top = 18.0
offset_right = 252.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_1l46r")
theme_override_font_sizes/font_size = 8
text = "Page 1 of 1"
horizontal_alignment = 2

[node name="MyButton" type="Sprite2D" parent="."]
position = Vector2(128, 176)
texture = ExtResource("4_8r1wq")
vframes = 2
script = ExtResource("5_8r1wq")
metadata/_custom_type_script = "uid://dpe72hg3l4dw8"

[node name="Left" type="Sprite2D" parent="."]
position = Vector2(24, 176)
texture = ExtResource("6_8r1wq")
vframes = 2
script = ExtResource("5_8r1wq")
metadata/_custom_type_script = "uid://dpe72hg3l4dw8"

[node name="Right" type="Sprite2D" parent="."]
position = Vector2(232, 176)
texture = ExtResource("6_8r1wq")
flip_h = true
vframes = 2
script = ExtResource("5_8r1wq")
metadata/_custom_type_script = "uid://dpe72hg3l4dw8"

[connection signal="clicked" from="MyButton" to="." method="_on_my_button_clicked"]
[connection signal="clicked" from="Left" to="." method="_on_left_clicked"]
[connection signal="clicked" from="Right" to="." method="_on_right_clicked"]
